update source link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">Feel free to download or clone the source of my website and blog <a href="https://github.com/fabiofilli/fabiofilli">here</a>.</p>
+        <p class="text">Feel free to download or clone the source of my website and blog <a href="https://github.com/fabiofilli/fabiofilli.github.io">here</a>.</p>
       </div>
     </div>
 
