--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>Get in touch</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="mailto:{{ site.email }}">Feel free to write me!</a></li>
+          <li>hej hej at my domain</a></li>
         </ul>
       </div>
 
