--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -193,6 +193,11 @@
 /**
  * Posts
  */
+ .post-lang-title {
+   font-size: 20px;
+   margin-top: 40px;
+   margin-bottom: 10px;
+}
 .post-header {
     margin-bottom: $spacing-unit;
 }
