--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -205,7 +205,7 @@
 }
 
 .post-title {
-    font-size: 40px;
+    font-size: 34px;
     letter-spacing: -1px;
     line-height: 1;
     font-family: $post-title-font-family;
@@ -221,6 +221,7 @@
     h2 {
         font-size: 32px;
         font-family: $post-undertitle-font-family;
+        font-weight: 700;
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -230,6 +231,8 @@
     h3 {
         font-size: 26px;
         font-family: $post-undertitle-font-family;
+        font-weight: 700;
+
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -239,6 +242,8 @@
     h4 {
         font-size: 20px;
         font-family: $post-undertitle-font-family;
+        font-weight: 700;
+
 
         @include media-query($on-laptop) {
             font-size: 18px;
