--- a/css/main.scss
+++ b/css/main.scss
@@ -5,19 +5,20 @@
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,500,300italic,400italic,300,100italic,100);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700);
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 @import url(http://fonts.googleapis.com/css?family=Special+Elite);
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $site-title-font-family: "Special Elite", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$nav-font-family: "Roboto Slab 700", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$nav-font-family: "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $post-title-font-family: "Special Elite", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$post-undertitle-font-family: "Roboto 700", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$post-text-font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$post-undertitle-font-family: "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$post-text-font-family: "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $spacing-unit:     30px;
 
