--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,6 @@
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li><a href="mailto:{{ site.email }}">Feel free to write me!</a></li>
-          <li>hej hej at my domain</a></li>
         </ul>
       </div>
 
@@ -44,7 +43,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">Feel free to download or clone the source of my website and blog <a href="https://github.com/fabiofilli/fabiofilli.github.io">here</a>.</p>
+        <p class="text">Feel free to download or clone the source of my Website and Notes <a href="https://github.com/fabiofilli/fabiofilli.github.io">here</a>.</p>
       </div>
     </div>
 
