--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li><a href="mailto:{{ site.email }}">Feel free to write me!</a></li>
+          <li><a href="mailto:{{ site.email }}">Write me</a></li>
         </ul>
       </div>
 
