--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,17 @@
     </script>
     <noscript><p><img src="//ffilli.piwikpro.com/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
+    <!-- Typekit Code -->
+    <script>
+      (function(d) {
+        var config = {
+          kitId: 'dfx4lhc',
+          scriptTimeout: 3000
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
+    <!-- End Typekit Code -->
   </body>
 
 </html>
