--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ $base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$site-title-font-family: "source-code-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$site-title-font-family: "source-code-pro", "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $nav-font-family: "source-code-pro", "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $post-title-font-family: "source-code-pro", "Special Elite", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $post-undertitle-font-family: "source-code-pro", "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
