modify notes page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -186,10 +186,13 @@
 }
 
 .post-link {
-    display: block;
-    font-size: 24px;
+    display: inline;
+    font-size: 17px;
 }
 
+.post-rss {
+    margin-top: 70px;
+}
 
 
 /**
