--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">hej hej</a>
+    <a class="site-title" href="{{ site.baseurl }}/">Hej Hej</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
